# MCDA5511

./: .gitignore  .gitmodules  README.md  pyproject.toml
assignment1-embeddings/: .gitignore  README.md  classmates.csv  embeddings.json  embeddings_model_a.json  embeddings_model_b.json  main.py  model_comparison.py  pyproject.toml  visualizer.ipynb
